Added some (AI generated) HTML comments in index.html to describe project.

--- a/index.html
+++ b/index.html
@@ -11,4 +11,16 @@
   <body>
     <div id="app"></div>
   </body>
+  <!--
+  Pixel Reactor v3.0-ghp
+  A web-based pixel art editor and animation tool.
+  Features include:
+  - Pixel-level drawing tools
+  - Frame-by-frame animation support
+  - Dump and load animations via JSON
+  - Dump and load rulesets via JSON
+  - Create custom color palettes
+  Developed by Greg Propf.
+  Visit our GitHub repository for source code and contributions
+-->
 </html>
